# rust-yew-app

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
js/: js_time.js  line_chart.js  maps.js  pie_chart.js  radar_chart.js
src/: app.rs  bindings.rs  main.rs  router.rs
src/api/: mod.rs  parser_api.rs  quote_api.rs  types.rs  user_api.rs
src/components/: alert.rs  form_input.rs  header.rs  hero_header.rs  loading_button.rs  mod.rs  section.rs  spinner.rs
src/components/calendar/: calendar.rs  mod.rs
src/components/charts/: line_chart.rs  mod.rs  pie_chart.rs  radar_chart.rs
src/components/content_section/: content_section.rs  mod.rs
src/components/curtain/: curtain.rs  mod.rs
src/components/header/: header.rs
src/components/maps/: control.rs  map_component.rs  maps.rs  mod.rs
src/components/pagination/: mod.rs  pagination.rs  pagination_item.rs
src/components/sidebar/: mod.rs  sidebar.rs  sidebar_item.rs
src/pages/: account_page.rs  dashboard_page.rs  firms_info_page.rs  firms_page.rs  firms_reviews_page.rs  home_page.rs  login_page.rs  maps_page.rs  mod.rs  not_found.rs  parser_page.rs  profile_page.rs  quotes_page.rs  register_page.rs  users_page.rs
src/store/: mod.rs  store.rs
src/widgets/: mod.rs
src/widgets/quotes_curtain/: mod.rs  quotes_curtain.rs
src/widgets/users_curtain/: users_curtain.rs
styles/: tailwind.css
